# Lakehouse_demo_project

./: README.md  databricks.yml  pyproject.toml
.github/workflows/: deploy.yml  deploy_databricks.yml  hatch.yml  main.yml  test_validate.yml
resources/: bookings.pipeline.yml  lakehouse.job.yml  lakehouse.pipeline.yml  lakehouse_dashboard.yml
resources/app/: booking.database.yml  bookings.app.yml  bookings.pipeline.yml
resources/environments/: target_dev.yml  target_developer.yml  target_prd.yml  target_tst.yml  target_user.yml
resources/unity_catalog/: curated.yml  enriched.yml
resources/unity_catalog/app/: bookings.yml
resources/unity_catalog/source_systems/: bookings.yml  lakehouse.yml  review.yml
src/: main.py
src/app_bookings/: app.py
src/app_bookings/routes/: __init__.py
src/app_streamlit/: app.py  config.toml  view_groups.py
src/base/: base_ingest_bookings.py  base_ingest_lakehouse.py  base_ingest_lakehouse_scd2.py  base_ingest_review.py
src/base/config/: bookings.yml  lakehouse.yml  lakehouse_scd2.yml  review.yml  source_system_name.yml
src/curated/dimensions/: dim_calendar.py  dim_customer.py  dim_customer_cdc_scd1.py  dim_customer_cdc_scd2.py  dim_customer_mv_scd1.py  dim_lakehouse.py  (+2 more)
src/dashboards/: Lakehouse-dashboard.lvdash.json
src/enriched/: enriched_calendar.py
src/helper/: commen.py  common.py  config.py  databricks_helper.py  dw.py  lakeflow_declarative_pipeline.py  logging_helper.py  read.py  synthetic_data_config.py  write.py
src/landing/: lakehouse_synthetic_data.py  review_synthetic_data.py
src/raw/: raw_ingest_bookings.py  raw_ingest_lakehouse.py  raw_ingest_review.py  temp_table_test.py
tests/: main_test.py
(+5 files in other folders)
